compiling_error.txt
/Users/ryandirezze/Documents/GitHub/cs162_lab2/testNewFunctions.cpp:8:12: error: no template named 'pair'; did you mean 'std::pair'?
   typedef pair<const 0, 'R'> char;
           ^~~~
           std::pair
/Library/Developer/CommandLineTools/usr/include/c++/v1/utility:312:29: note: 'std::pair' declared here
struct _LIBCPP_TEMPLATE_VIS pair
                            ^
/Users/ryandirezze/Documents/GitHub/cs162_lab2/testNewFunctions.cpp:8:23: error: expected a type
   typedef pair<const 0, 'R'> char;
                      ^
/Users/ryandirezze/Documents/GitHub/cs162_lab2/testNewFunctions.cpp:8:31: error: expected unqualified-id
   typedef pair<const 0, 'R'> char;
                              ^
/Users/ryandirezze/Documents/GitHub/cs162_lab2/testNewFunctions.cpp:10:17: error: use of undeclared identifier 'paid'
   std::cout << paid[0] << std::endl;
                ^
/Users/ryandirezze/Documents/GitHub/cs162_lab2/testNewFunctions.cpp:13:2: error: expected unqualified-id
}5
 ^
5 errors generated.
